--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,37 @@ body {
     max-width: 1140px;
     margin: auto;
 }
-.title {
+.bar {
+    background-color: var(--main-color);
+    width: 168px;
+    height: 22px;
+}
+h1 {
     font-family: 'Oswald', sans-serif;
+    font-weight: bold;
+    font-size: 90px;
+    line-height: 100px;
+    margin: 0;
+    margin-bottom: 30px;
+}
+h2 {
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
+    font-size: 35px;
+    line-height: 45px;
+    margin: 20px 0;
+}
+.button {
+    display: inline-block;
+    border: 2px solid #454545;
+    padding: 10px 30px;
+    border-radius: 3px;
+    color: #454545;
+    text-decoration: none;
+}
+.button:hover {
+    color: #FFFFFF;
+    background-color: #454545;
 }
 
 /*Header*/
@@ -81,14 +110,6 @@ header .line {
     padding-top: 90px;
     padding-bottom: 90px;
 }
-.banner h1 {
-    /*font-size: 6rem;*/
-    font-size: 90px;
-    font-weight: bold;
-    line-height: 100px;
-    margin: 0;
-    margin-bottom: 30px;
-}
 .banner--images {
     margin-top: 60px;
 }
@@ -100,3 +121,104 @@ header .line {
     margin-right: 40px;
 }
 
+/*Área 1*/
+
+.area1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.area1--content {
+    padding: 80px;
+}
+.area1--quote {
+    margin-bottom: 30px;
+}
+.area1--text {
+    margin-bottom: 50px;
+    line-height: 25px;
+}
+.area1--img1 {
+    background-color: green;
+    height: 350px;
+    background-image: url('../images/f2.jpg');
+    background-size: cover;
+    background-position: center;
+}
+.area1--img2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    background-image: url('../images/f1.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+/*Área 2*/
+
+.area2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.area2--content {
+    padding: 80px;
+}
+.area2--text {
+    margin-bottom: 50px;
+    line-height: 25px;
+}
+.area2--img1 {
+    background-color: green;
+    height: 450px;
+    background-image: url('../images/f4.jpg');
+    background-size: cover;
+    background-position: center;
+}
+.area2--img2 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    background-image: url('../images/f3.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+/*Área 3*/
+
+.area3 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.area3--content {
+    padding: 350px 80px;
+    background-image: url('../images/bg2.jpg');
+    background-size: cover;
+    background-position: left;
+}
+.area3--text {
+    margin-bottom: 50px;
+    line-height: 25px;
+}
+.area3--img1 {
+    background-image: url('../images/f5.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+/*Área 4*/
+
+.area4 {
+    display: grid;
+    grid-template-columns: 437px 1fr;
+    background-color: #e8e9ee;
+}
+.area4--content {
+    padding: 200px 80px;
+}
+.area4--text {
+    margin-bottom: 50px;
+    line-height: 25px;
+
+}
+.area4--img1 {
+    background-image: url('../images/bg3.jpg');
+    background-position: left;
+    background-repeat: no-repeat;
+}
