--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ h2 {
     background-color: #454545;
 }
 
-/*Header*/
+/* Header */
 
 header .line {
     background-color: var(--main-color);
@@ -101,7 +101,7 @@ header .line {
     height: 24px;
 }
 
-/*Banner*/
+/* Banner */
 
 .banner {
     background-image: url('../images/bg.jpg');
@@ -121,7 +121,7 @@ header .line {
     margin-right: 40px;
 }
 
-/*Área 1*/
+/* Área 1 */
 
 .area1 {
     display: grid;
@@ -152,7 +152,7 @@ header .line {
     background-position: center;
 }
 
-/*Área 2*/
+/* Área 2 */
 
 .area2 {
     display: grid;
@@ -180,7 +180,7 @@ header .line {
     background-position: center;
 }
 
-/*Área 3*/
+/* Área 3 */
 
 .area3 {
     display: grid;
@@ -202,7 +202,7 @@ header .line {
     background-position: center;
 }
 
-/*Área 4*/
+/* Área 4 */
 
 .area4 {
     display: grid;
@@ -222,3 +222,24 @@ header .line {
     background-position: left;
     background-repeat: no-repeat;
 }
+
+/* Área 5 */
+
+.area5 {
+    background-image: url('../images/bg4.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 900px;
+}
+
+/* Footer */
+
+footer {
+    background-color: #333333;
+    color: #FFFFFF;
+    padding: 80px;
+    text-align: center;
+}
+
+/* Responsividade */
+
